Fix alignment and change expand icon position

--- a/app/CourseSelect/CourseSelect.css
+++ b/app/CourseSelect/CourseSelect.css
@@ -25,21 +25,19 @@ legend {
 }
 
 .department-heading {
+  display: flex;
   font: 400 1rem "Open Sans", Helvetica, sans-serif;
   color: #0f5479;
   cursor: pointer;
   margin-bottom: 0.5rem;
-  margin-left: 2rem;
+  align-items: center;
 }
 
-.department-heading:after {
-  content: "▲";
-  position: absolute;
-  right: 3.25rem;
-}
-
-.expand-indicator {
-  font: 400 1rem "Open Sans", Helvetica, sans-serif;
+.department-heading:before {
+  width: 2rem;
+  flex-shrink: 0;
+  content: "►";
+  font-size: 0.75rem;
 }
 
 .department-heading:hover {
@@ -71,7 +69,7 @@ legend {
 input[type="checkbox"] {
   width: 2rem;
   margin: 0;
-  /* margin-right: 1rem; */
+  flex-shrink: 0;
 }
 
 /* .department-courses > li:hover {
